--- a/portfolio.html
+++ b/portfolio.html
@@ -330,7 +330,7 @@
 					</a>
 
 					<address class="footer-nav list link">
-						<ul class="list">
+						<ul class="footer-nav-list list">
 							<li class="footer-nav-item">
 								<a href="" class="footer-nav-address link">г. Киев, пр-т Леси Украинки, 26</a>
 							</li>
